--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
     <link rel="stylesheet" href="styleescuro.css" id="estilo">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -206,7 +205,7 @@
 
 <div class="manutencao">
     <div>
-<h1 class="titulo">SERVIÇOS</h1>
+<h1>SERVIÇOS</h1>
 <table border="4">
     <thead>
         <th>Serviços</th>
@@ -238,11 +237,11 @@
             <td>R$ 32,99</td>
         </tr>
     </tbody>
-</table><br>
+</table>
 </div>
 
 <div>
-<h1 class="titulo">COMBOS</h1>
+<h1>COMBOS</h1>
 <table border="4" id="combo">
     <thead>
         <th>Combos</th>
@@ -271,8 +270,8 @@
 <div id="contato"></div>
 </div>
     
-    <div style="font-family: 'Montserrat'; font-size: 24px;">
-    <h2 class="titulo" id="form">Formulário</h2>
+    <div style="font-family: 'Montserrat'; font-size: 24px;" class="formulario">
+    <h2 id="form">Formulário</h2>
     <form>
         
         <h5 style="font-family: Montserrat;">Digite seu nome</h5>
